// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon default 1`] = `
<svg
  class=""
  data-testid="AiOutlineExclamationCircle"
  id="undefined_id"
  title=""
/>
`;

exports[`Icon default and id 1`] = `
<svg
  class=""
  data-testid="AiOutlineExclamationCircle"
  id="test-id"
  title=""
/>
`;

exports[`Icon properties string 1`] = `
<svg
  class=""
  data-testid="AiIcon"
  id="test-id"
  title="Icon"
/>
`;

exports[`Icon properties.name 1`] = `
<svg
  class=""
  data-testid="AiIcon"
  id="test-id"
  title="Icon"
/>
`;

exports[`Icon properties.name error 1`] = `
<svg
  class=""
  color="#F00"
  data-testid="AiOutlineExclamationCircle"
  id="test-id"
  title="Icon"
/>
`;

exports[`Icon properties.spin 1`] = `
<svg
  class="undefined"
  data-testid="AiOutlineLoading3Quarters"
  id="test-id"
  title="Icon"
/>
`;

exports[`Icon styles.element 1`] = `
<svg
  class=""
  data-testid="AiIcon"
  id="test-id"
  style="background: yellow;"
  title="Icon"
/>
`;
